--- a/index.html
+++ b/index.html
@@ -47,22 +47,19 @@
                 <a href="#"><i class="fa fa-dashboard"></i> Dashboard</a>
             </li>
             <li>
-                <a href="#"><i class="fa fa-area-chart"></i> Analytics</a>
-            </li>
-            <li>
-                <a href="#"><i class="fa fa-tree"></i> Treading</a>
-            </li>
-            <li>
-                <a href="#"><i class="fa fa-shield"></i> Privacy</a>
-            </li>
-            <li>
-                <a href="#"><i class="fa fa-foursquare"></i> Forum</a>
-            </li>
-            <li>
-                <a href="#"><i class="fa fa-support"></i> Support</a>
-            </li>
-            <li>
-                <a href="#"><i class="fa fa-signal"></i> Settings</a>
+                <a href="javascript:;" data-toggle="collapse" data-target="#client_management" class="collapsed"
+                   aria-expanded="false">
+                    <i class="fa fa-fw fa-user"></i> User Management
+                    <i class="fa fa-fw fa-caret-down"></i>
+                </a>
+                <ul id="client_management" class="submenu collapse" aria-expanded="false" style="height: 0px;">
+                    <li>
+                        <a href="">All Users</a>
+                        <a href="#">Search Users</a>
+                        <a href="#">Add New User</a>
+                        <a href="#">Manage Affiliates</a>
+                    </li>
+                </ul>
             </li>
         </ul>
     </div>
