--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Binary Pack">
     <meta name="author" content="Binary Pack Ltd.">
     <link rel="icon" href="img/favicon.ico">
-    <title>Admin Template</title>
+    <title>Bootstrap Admin Template</title>
 
     <!-- CSS libraries-->
     <link href="css/bootstrap.min.css" rel="stylesheet">
