Something changes for testing purpose.

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
                         <a href="#">Search Users</a>
                         <a href="#">Add New User</a>
                         <a href="#">Manage Affiliates</a>
+                        <a href="#">Active Users</a>
                     </li>
                 </ul>
             </li>
